Update MekHQ/src/mekhq/campaign/stratCon/StratConRulesManager.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>